crates/eure-macros/tests/compile_fail/proxy_named_missing_field_from.stderr
error[E0063]: missing field `b` in initializer of `Target`
  --> tests/compile_fail/proxy_named_missing_field_from.rs:13:5
   |
13 |     a: u32,
   |     ^ missing `b`
